--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Wall-E</string>
-    <string name="up">Up</string>
-    <string name="down">Down</string>
     <string name="left">Left</string>
     <string name="right">Right</string>
     <string name="wall_e">Wall-E</string>
+    <string name="forward">Forward</string>
+    <string name="backward">Backward</string>
 </resources>
